add key for google map

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCktpOFiRuMjk7baqDnh7JTijen5bz7VWI"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
