change profile image and add another page for pdf resume

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Resume</title>
-  <link href="css/style.css" rel="stylesheet">
-  <!--
-  Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
-  -->
+  <title>Yan Ren</title>
+  <meta name="description" content="This is Yan Ren's resume website">
+  <meta http-equiv="author" content="Yan Ren">
+  <link rel="shortcut icon" href="./images/favicon.ico">
+  <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCktpOFiRuMjk7baqDnh7JTijen5bz7VWI"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
