--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
             <div style="float: right;">
-                <a id="printableView" target="_blank" href="./CV2017_02_Yan.pdf" style="text-decoration: none;">
+                <a id="printableView" target="_blank" href="./CV2018_03.pdf" style="text-decoration: none;">
                     <img src="./images/pdf-icon.png" style="height: 30px; vertical-align: middle;" /><span style="margin-left: 5px; font-weight: bold;">Printable View</span>
                 </a>
             </div>
