--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
                 </a>
             </div>
             <br />
-            <embed src="./CV2017_02_Yan.pdf" style="width: 850px; height: 1150px; margin-top: 20px;" />
+            <embed src="./CV2018_03.pdf" style="width: 850px; height: 1150px; margin-top: 20px;" />
         </div>
     </div>
 </body>
