--- a/v2/index.html
+++ b/v2/index.html
@@ -51,16 +51,16 @@
 
 	</head>
 	<body>
-	<div id="colorlib-page">
+	<div id="page">
 		<div class="container-wrap">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
+		<a href="#" class="js-nav-toggle nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
+		<aside id="aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Jackson Ford</a></h1>
+				<h1 id="logo"><a href="index.html">Jackson Ford</a></h1>
 				<span class="position"><a href="#">UI/UX/Designer</a> in Philippines</span>
 			</div>
-			<nav id="colorlib-main-menu" role="navigation" class="navbar">
+			<nav id="main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
@@ -76,7 +76,7 @@
 				</div>
 			</nav>
 
-			<div class="colorlib-footer">
+			<div class="footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash.com</a></span></small></p>
@@ -90,8 +90,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 		</aside>
 
-		<div id="colorlib-main">
-			<section id="colorlib-hero" class="js-fullheight" data-section="home">
+		<div id="main">
+			<section id="hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
@@ -130,15 +130,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			  	</div>
 			</section>
 
-			<section class="colorlib-about" data-section="about">
-				<div class="colorlib-narrow-content">
+			<section class="about" data-section="about">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
-										<h2 class="colorlib-heading">Who Am I?</h2>
+										<h2 class="heading">Who Am I?</h2>
 										<p><strong>Hi I'm Jackson Ford</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
 										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 									</div>
@@ -185,12 +185,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 
-			<section class="colorlib-services" data-section="services">
-				<div class="colorlib-narrow-content">
+			<section class="services" data-section="services">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">What I do?</span>
-							<h2 class="colorlib-heading">Here are some of my expertise</h2>
+							<h2 class="heading">Here are some of my expertise</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
@@ -264,38 +264,38 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
+			<div id="counter" class="counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
-				<div class="colorlib-narrow-content">
+				<div class="narrow-content">
 					<div class="row">
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Cups of coffee</span>
+							<span class="counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Projects</span>
+							<span class="counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Clients</span>
+							<span class="counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="counter-label">Clients</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Partners</span>
+							<span class="counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="counter-label">Partners</span>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<section class="colorlib-skills" data-section="skills">
-				<div class="colorlib-narrow-content">
+			<section class="skills" data-section="skills">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">My Specialty</span>
-							<h2 class="colorlib-heading animate-box">My Skills</h2>
+							<h2 class="heading animate-box">My Skills</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -372,12 +372,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-education" data-section="education">
-				<div class="colorlib-narrow-content">
+			<section class="education" data-section="education">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Education</span>
-							<h2 class="colorlib-heading animate-box">Education</h2>
+							<h2 class="heading animate-box">Education</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -469,12 +469,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-experience" data-section="experience">
-				<div class="colorlib-narrow-content">
+			<section class="experience" data-section="experience">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Experience</span>
-							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+							<h2 class="heading animate-box">Work Experience</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -555,12 +555,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-work" data-section="work">
-				<div class="colorlib-narrow-content">
+			<section class="work" data-section="work">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">My Work</span>
-							<h2 class="colorlib-heading animate-box">Recent Work</h2>
+							<h2 class="heading animate-box">Recent Work</h2>
 						</div>
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
@@ -668,12 +668,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-blog" data-section="blog">
-				<div class="colorlib-narrow-content">
+			<section class="blog" data-section="blog">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Read</span>
-							<h2 class="colorlib-heading">Recent Blog</h2>
+							<h2 class="heading">Recent Blog</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -716,39 +716,39 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-contact" data-section="contact">
-				<div class="colorlib-narrow-content">
+			<section class="contact" data-section="contact">
+				<div class="narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Get in Touch</span>
-							<h2 class="colorlib-heading">Contact</h2>
+							<h2 class="heading">Contact</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-5">
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
+							<div class="feature feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="icon">
 									<i class="icon-globe-outline"></i>
 								</div>
-								<div class="colorlib-text">
+								<div class="text">
 									<p><a href="#">info@domain.com</a></p>
 								</div>
 							</div>
 
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
+							<div class="feature feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="icon">
 									<i class="icon-map"></i>
 								</div>
-								<div class="colorlib-text">
+								<div class="text">
 									<p>198 West 21th Street, Suite 721 New York NY 10016</p>
 								</div>
 							</div>
 
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
+							<div class="feature feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="icon">
 									<i class="icon-phone"></i>
 								</div>
-								<div class="colorlib-text">
+								<div class="text">
 									<p><a href="tel://">+123 456 7890</a></p>
 								</div>
 							</div>
@@ -781,9 +781,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-		</div><!-- end:colorlib-main -->
+		</div><!-- end:main -->
 	</div><!-- end:container-wrap -->
-	</div><!-- end:colorlib-page -->
+	</div><!-- end:page -->
 
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
