popup windown for game, and add work section

--- a/v2/ball_drop.html
+++ b/v2/ball_drop.html
@@ -1,18 +1,25 @@
 <html>
 
 <HEAD>
-
+  <meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Bouncing Ball</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="yan's profile" />
+	<meta name="keywords" content="" />
+	<meta name="author" content="Yan" />
+  <link rel="shortcut icon" href="./images/favicon.ico">
 </HEAD>
 <BODY>
 
     <center>
         Click anywhere to start playing bouncing ball<br>
         <div id="staticBall" style="position:relative;visibility:visible">
-            <img src="./img/basketball.png" height=30 width=30 alt="Static ball">
+            <img src="./images/basketball.png" height=30 width=30 alt="Static ball">
         </div>
     </center>
     <div id="ball" style="visibility:hidden; position:absolute; left:100; top:10; height:34; width:34">
-        <img src="./img/basketball.png" height=30 width=30 alt="Bouncing ball">
+        <img src="./images/basketball.png" height=30 width=30 alt="Bouncing ball">
     </div>
 
     <script src="js/game.js"></script>
