--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <title>Yan Ren</title>
     <meta name="description" content="This is Yan Ren's resume website">
     <meta http-equiv="author" content="Yan Ren">
-    <script src="js/jQuery.js"></script>
+    <script src="js/jquery.min.js"></script>
     <style>
         #printableView {
             opacity: 0.8;
@@ -23,17 +23,17 @@
         <div style="display: inline-block; width: 850px;">
             <div style="float: left;">
                 <a id="printableView" target="_self" href="./index.html" style="text-decoration: none;">
-                    <img src="./images/previous.png" style="height: 30px; vertical-align: middle;" />
+                    <img src="./images/previous-icon.png" style="height: 30px; vertical-align: middle;" />
                     <span style="margin-left: 5px; font-weight: bold;">Go back</span>
                 </a>
             </div>
             <div style="float: right;">
-                <a id="printableView" target="_blank" href="./CV2018_03.pdf" style="text-decoration: none;">
+                <a id="printableView" target="_blank" href="./CV.pdf" style="text-decoration: none;">
                     <img src="./images/pdf-icon.png" style="height: 30px; vertical-align: middle;" /><span style="margin-left: 5px; font-weight: bold;">Printable View</span>
                 </a>
             </div>
             <br />
-            <embed src="./CV2018_03.pdf" style="width: 850px; height: 1150px; margin-top: 20px;" />
+            <embed src="./CV.pdf" style="width: 850px; height: 1150px; margin-top: 20px;" />
         </div>
     </div>
 </body>
