--- a/index.html
+++ b/index.html
@@ -459,18 +459,18 @@
 						<div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="">
+									<form class="gform" action="https://script.google.com/macros/s/AKfycbySd0kXkJDv-ziue-W-oYad57JjaT8-8G0V3HVc/exec">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name">
+											<input type="text" name="name" class="form-control" placeholder="Name">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Email">
+											<input type="email" name="email" class="form-control" placeholder="Email">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Subject">
+											<input type="text" name="subject" class="form-control" placeholder="Subject">
 										</div>
 										<div class="form-group">
-											<textarea name="" id="message" cols="30" rows="7" class="form-control" placeholder="Send me message, I will get back to you as soon as possible!"></textarea>
+											<textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Send me message, I will get back to you as soon as possible!"></textarea>
 										</div>
 										<div class="form-group">
 											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message To My Email">
@@ -504,6 +504,7 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 
+	<script data-cfasync="false" type="text/javascript" src="js/form-submission-handler.js"></script>
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
