--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="heading">Who Am I?</h2>
-										<p><strong>Hi I'm Yan Ren</strong> - a Software Developer working in Montreal. </p>
-										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+										<p><strong>Hi I'm Yan Ren</strong> - a Software Developer working in Montreal.</p>
+										<p>I like innovative ideas and am passionate about learning new technologies. Everyday life is like programming, I guess. If you love something you can put beauty into it.</p>
 									</div>
 								</div>
 							</div>
@@ -176,30 +176,36 @@
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Innovative Ideas</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Programming Languages</h3>
+									<p>Java<br>
+										Python<br>
+										Perl<br>
+										Golang<br>
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-2">
 								<span class="icon">
-									<i class="icon-data"></i>
+									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Web</h3>
+									<p>JavaScript (Node.js, Angular, jQuery)<br>
+										HTML5<br>
+										CSS (Bootstrap)</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate-box">
 							<div class="services color-3">
 								<span class="icon">
-									<i class="icon-phone3"></i>
+									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Database</h3>
+									<p>MySQL, MongoDB</p>
 								</div>
 							</div>
 						</div>
@@ -209,12 +215,12 @@
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Graphic Design</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Tools</h3>
+									<p>Bash, PowerShell, Git, Gitlab CI, Docker, Jupiter Notebook</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 text-center animate-box">
+						<!-- <div class="col-md-4 text-center animate-box">
 							<div class="services color-5">
 								<span class="icon">
 									<i class="icon-data"></i>
@@ -235,7 +241,7 @@
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				</div>
@@ -267,7 +273,7 @@
 										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 										      		</div>
 										      		<div class="col-md-6">
-										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+										      			<p>This is where I learn programming is an extremely creative profession. It’s logic-based creativity.</p>
 										      		</div>
 										      	</div>
 									         </div>
