--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Yan Ren</title>
+    <title>Yan</title>
     <meta name="description" content="This is Yan Ren's resume website">
     <meta http-equiv="author" content="Yan Ren">
     <script src="js/jquery.min.js"></script>
